# cse-3200-System

./: .gitignore  README.md  commands.txt  pyproject.toml  requirements.txt  test_ollama.py
Data Ingestion & parsing/: dataingestion.ipynb
Varnoq/Varnoq System/backend/: .env.example  pyproject.toml
Varnoq/Varnoq System/backend/bangladoc_ocr/: __init__.py  celery_app.py  config.py  exceptions.py  pipeline.py  schemas.py
Varnoq/Varnoq System/backend/bangladoc_ocr/assets/prompts/: ollama_prompt.txt
Varnoq/Varnoq System/backend/bangladoc_ocr/core/: ocr_engine.py
Varnoq/Varnoq System/backend/bangladoc_ocr/db/: __init__.py
Varnoq/Varnoq System/backend/bangladoc_ocr/extraction/: __init__.py
Varnoq/Varnoq System/backend/bangladoc_ocr/fallback/: __init__.py
Varnoq/Varnoq System/backend/bangladoc_ocr/fallback/llm_tasks/: __init__.py  gemini.py
Varnoq/Varnoq System/backend/bangladoc_ocr/nlp/: __init__.py  unicode_validator.py
Varnoq/Varnoq System/backend/bangladoc_ocr/pipeline_tasks/: __init__.py  document_processor.py  ocr_chain.py
Varnoq/Varnoq System/backend/bangladoc_ocr/server/: app.py
Varnoq/Varnoq System/backend/bangladoc_ocr/server/routes/: __init__.py  corpus_routes.py
Varnoq/Varnoq System/backend/bangladoc_ocr/static/js/: api.js  main.js  reports.js  state.js  upload.js  utils.js
Varnoq/Varnoq System/backend/bangladoc_ocr/tests/: test_bangla_corrector.py  test_numeric_validator.py
mactry/: .gitignore  (+2 more)
mactry/bangladoc_surya_clean/backend/: .env.example  pyproject.toml
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/: auth.py  config.py  tasks.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/assets/prompts/: ocr_prompt.txt
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/core/: image_describer.py  pdf_router.py  surya_engine.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/db/: models.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/extraction/: table_handler.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/fallback/: llm_fallback.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/fallback/llm_tasks/: gemini.py  ollama.py  parser.py  state.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/nlp/: numeric_validator.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/pipeline_tasks/: helpers.py  image_tasks.py  ocr_chain.py  page_processor.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/server/: app.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/server/routes/: auth_routes.py  document_routes.py
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/static/: index.html
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/static/css/: app.css
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/static/js/: auth.js  documents.js  upload.js
mactry/bangladoc_surya_clean/backend/bangladoc_ocr/tests/: test_confidence_scorer.py  test_unicode_validator.py
mactry/last_try_OCR/: .env  .env.example  Makefile  README.md  api_fallback.py  bangla_corrector.py  bangla_wordlist.txt  config.py  main.py  numeric_validator.py  ocr_engine.py  pipeline.py  pyproject.toml  requirements.txt  unicode_validator.py
mactry/last_try_OCR/assets/: bangla_wordlist.txt
mactry/last_try_OCR/assets/prompts/: ollama_prompt.txt
mactry/last_try_OCR/extraction/: image_processor.py
mactry/last_try_OCR/fallback/: llm_fallback.py
mactry/last_try_OCR/nlp/: bangla_corrector.py  confidence_scorer.py  unicode_validator.py
mactry/last_try_OCR/output/: json_builder.py
mactry/last_try_OCR/server/: app.py
mactry/last_try_OCR/tests/: test_bangla_corrector.py  test_confidence_scorer.py  test_numeric_validator.py  test_unicode_validator.py
(+1024 files in other folders)
